--- a/index.html
+++ b/index.html
@@ -57,6 +57,13 @@
 				</ul>
 			</li>
 			<li>
+				What method of payment do you usually do? (cash or credit card)
+				<ul>
+					<li>Why such transaction?</li>
+					<li>Were there any problems encountered?</li>
+				</ul>
+			</li>
+			<li>
 				How often do you shop for groceries in a month?
 				<ul>
 					<li>On what day do you usually go for groceries? Why?</li>
